make sure overflow styles are hidden

--- a/freemocap-ui/src/styles/App.css
+++ b/freemocap-ui/src/styles/App.css
@@ -31,6 +31,10 @@
   overflow-x: auto;
 }
 
+.overflow-x-hidden {
+  overflow-x: hidden;
+}
+
 /* ==========================
    Global Scrollbar Styling
    Applies to all scrollbars
